--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
         </span>
       </div>
     </main>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
