--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
   </head>
   <body>
     <main>
@@ -27,14 +34,7 @@
         Дополнительно использую: медитативные,
       </p>
       <p class="main--text">телесно-ориентированные и арт-техники</p>
-      <p class="main--text">
-        Провожу индивидуальные консультации онлайн и очно, а также группы
-        Интенсивного Жизненного Интереса
-      </p>
-
-      <p class="main--text">Практический опыт работы психологом</p>
-      <p class="main--text">15 лет‌</p>
-      <div>
+      <div class="main--arrows">
         <span class="main--span">
           <svg
             data-mode="stroke"
@@ -55,7 +55,162 @@
           </svg>
         </span>
       </div>
+
+      <div class="main--drop-down">
+        <div class="main--drop-down-top">
+          <div class="main--drop-down-top-image"></div>
+          <h3>Мое образование</h3>
+        </div>
+        <div class="main--drop-down-info">
+          <p>
+            — Минский педагогический колледж (специальность — начальные классы и
+            худ.творчество) 1998г
+          </p>
+          <p>
+            — БГПУ им. Максима Танка (специальность — преподавание русского
+            языка и литературы) 2005г
+          </p>
+          <p>
+            — Академия последипломного образования (специальность — практическая
+            психология) 2007г
+          </p>
+          <p>— БГУ (экзистенциально-гуманистическая психотерапия) 2022г</p>
+        </div>
+      </div>
+
+      <div class="main--drop-down">
+        <div class="main--drop-down-top">
+          <div class="main--drop-down-top-image"></div>
+          <h3>Профессиональная деятельность</h3>
+        </div>
+        <div class="main--drop-down-info">
+          <p>
+            — С 2014-го провожу индивидуальные психологические консультации и
+            групповые занятия психологической направленности (семинары,
+            тренинги, арт-занятия, МАК, клуб общения «Палитра», занятия в «Школе
+            психологии для йога-практиков», «Школе медитации»)
+          </p>
+          <p>
+            — С 2020-го опыт сотрудничества с Белорусской Организацией Красного
+            Креста:
+          </p>
+          <p>
+            — Психолог-волонтер инфо-линии психосоциальной поддержки 122, 201
+          </p>
+          <p>
+            — Психолог учреждения «Открытый дом» для реабилитации людей с
+            ментальными расстройствами
+          </p>
+          <p>
+            — Психолог проекта по оказанию психологической помощи уязвимым слоям
+            населения
+          </p>
+          <p>
+            — Психолог проекта поддержки сотрудников и волонтеров КК — ведущая
+            занятий соматической гимнастики и йоги
+          </p>
+          <p>
+            — Психолог проекта поддержки медицинских работников, автор и ведущая
+            оздоровительной программы «Улучшение психофизического самочувствия».
+            Программа была реализована для медицинских и научных сотрудников
+            РНПЦ ДОГИ (Боровляны) с апреля по июнь 2021г
+          </p>
+        </div>
+      </div>
+
+      <a
+        href="https://e-clinic.by/staff/psikhologi/goldberg-svetlana-vladimirovna/"
+        target="_blank"
+        class="link-e-clinic"
+        >Моя визитка e-clinic.by</a
+      >
+
+      <div class="main--arrows">
+        <span class="main--span">
+          <svg
+            data-mode="fill"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+            fill="#FFF"
+          >
+            <path
+              d="M443.5 162.6l-7.1-7.1c-4.7-4.7-12.3-4.7-17 0L224 351 28.5 155.5c-4.7-4.7-12.3-4.7-17 0l-7.1 7.1c-4.7 4.7-4.7 12.3 0 17l211 211.1c4.7 4.7 12.3 4.7 17 0l211-211.1c4.8-4.7 4.8-12.3.1-17z"
+            ></path>
+          </svg>
+        </span>
+      </div>
+      <p class="main--text" style="margin-top: 15px; margin-bottom: 15px">
+        Провожу индивидуальные консультации онлайн и очно, а также группы
+        Интенсивного Жизненного Интереса
+      </p>
+
+      <p class="main--text">Практический опыт работы психологом</p>
+      <p class="main--text">15 лет‌</p>
+      <div class="main--arrows">
+        <span class="main--span">
+          <svg
+            data-mode="stroke"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            stroke-width="1"
+            stroke="#FFF"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path
+              d="M5 4h4l2 5-2.5 1.5a11 11 0 0 0 5 5L15 13l5 2v4a2 2 0 0 1-2 2A16 16 0 0 1 3 6a2 2 0 0 1 2-2m10 5l5-5"
+            ></path>
+            <path d="M15 5v4h4"></path>
+          </svg>
+        </span>
+      </div>
+
+      <a
+        href="https://t.me/psy_exist_authentic"
+        target="_blank"
+        class="link-telegram"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="42"
+          height="42"
+          fill="currentColor"
+          class="bi bi-telegram"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"
+          />
+        </svg>
+        <span>мой контакт telegram</span>
+        <span></span>
+      </a>
+      <a
+        href="viber://chat?number=+375295087124"
+        target="_blank"
+        class="link-viber"
+      >
+        <svg
+          style="color: white"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 512 512"
+          width="39"
+          height="39"
+        >
+          <path
+            d="M444 49.9C431.3 38.2 379.9.9 265.3.4c0 0-135.1-8.1-200.9 52.3C27.8 89.3 14.9 143 13.5 209.5c-1.4 66.5-3.1 191.1 117 224.9h.1l-.1 51.6s-.8 20.9 13 25.1c16.6 5.2 26.4-10.7 42.3-27.8 8.7-9.4 20.7-23.2 29.8-33.7 82.2 6.9 145.3-8.9 152.5-11.2 16.6-5.4 110.5-17.4 125.7-142 15.8-128.6-7.6-209.8-49.8-246.5zM457.9 287c-12.9 104-89 110.6-103 115.1-6 1.9-61.5 15.7-131.2 11.2 0 0-52 62.7-68.2 79-5.3 5.3-11.1 4.8-11-5.7 0-6.9.4-85.7.4-85.7-.1 0-.1 0 0 0-101.8-28.2-95.8-134.3-94.7-189.8 1.1-55.5 11.6-101 42.6-131.6 55.7-50.5 170.4-43 170.4-43 96.9.4 143.3 29.6 154.1 39.4 35.7 30.6 53.9 103.8 40.6 211.1zm-139-80.8c.4 8.6-12.5 9.2-12.9.6-1.1-22-11.4-32.7-32.6-33.9-8.6-.5-7.8-13.4.7-12.9 27.9 1.5 43.4 17.5 44.8 46.2zm20.3 11.3c1-42.4-25.5-75.6-75.8-79.3-8.5-.6-7.6-13.5.9-12.9 58 4.2 88.9 44.1 87.8 92.5-.1 8.6-13.1 8.2-12.9-.3zm47 13.4c.1 8.6-12.9 8.7-12.9.1-.6-81.5-54.9-125.9-120.8-126.4-8.5-.1-8.5-12.9 0-12.9 73.7.5 133 51.4 133.7 139.2zM374.9 329v.2c-10.8 19-31 40-51.8 33.3l-.2-.3c-21.1-5.9-70.8-31.5-102.2-56.5-16.2-12.8-31-27.9-42.4-42.4-10.3-12.9-20.7-28.2-30.8-46.6-21.3-38.5-26-55.7-26-55.7-6.7-20.8 14.2-41 33.3-51.8h.2c9.2-4.8 18-3.2 23.9 3.9 0 0 12.4 14.8 17.7 22.1 5 6.8 11.7 17.7 15.2 23.8 6.1 10.9 2.3 22-3.7 26.6l-12 9.6c-6.1 4.9-5.3 14-5.3 14s17.8 67.3 84.3 84.3c0 0 9.1.8 14-5.3l9.6-12c4.6-6 15.7-9.8 26.6-3.7 14.7 8.3 33.4 21.2 45.8 32.9 7 5.7 8.6 14.4 3.8 23.6z"
+            fill="white"
+          ></path>
+        </svg>
+        <span>мой контакт viber</span>
+        <span></span>
+      </a>
     </main>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
