--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <span></span>
       </a>
       <a
-        href="viber://chat?number=+375295087124"
+        href="viber://chat?number=%2B375295087124"
         target="_blank"
         class="link-viber"
       >
