--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       </a>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+<!--     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script> -->
     <script src="js/main.js"></script>
   </body>
 </html>
